    The unreproducible gmenumodel test failure on i386 might in fact be
    fixed by d/p/tests-Fix-data-race-in-gmenumodel-test.patch, but it's
    hard to be sure about that. The gvariant fuzz test is catastrophically
    slow on certain mips CPUs and so is impractical to run there.
    (Closes: #932678)
  * Standards-Version: 4.4.0 (no changes required)

 -- Simon McVittie <smcv@debian.org>  Fri, 26 Jul 2019 23:56:52 +0100

glib2.0 (2.60.5-1) unstable; urgency=medium

  * Team upload
  * Prepare GLib 2.60.x stable branch for unstable
  * New upstream release
  * d/p/portal-Add-a-getter-for-dconf-access.patch,
    d/p/settings-Tweak-priorities-for-keyfile-backend.patch,
    d/p/key-file-Handle-filename-being-NULL.patch:
    Add post-release fixes from upstream glib-2-60 branch
  * d/p/GIO-tests-Don-t-do-clever-tricks-with-objcopy.patch:
    Don't do strange things with objcopy while testing GResource,
    while we work out what is going on in mips64el builds.
    Mitigates: #932287

 -- Simon McVittie <smcv@debian.org>  Wed, 17 Jul 2019 21:36:30 +0100

glib2.0 (2.60.4-1) experimental; urgency=medium

  * New upstream release (LP: #1832457)
  +  Fixes to improved network status detection with NetworkManager (#1788)
  + Leak fixes to some `glib-genmarshal` generated code
  + Further fixes to the Happy Eyeballs (RFC 8305) implementation
  + File system permissions fix to clamp down permissions in a small time window
    when copying files (CVE-2019-12450)
  + Bugs fixed:
   - Please revert #535 gmacros: Try to use the standard __func__ first in
     G_STRFUNC
  * gfile-Limit-access-to-files-when-copying.patch: Drop. It's in this version
    upstream.
  * d/p/*: Refresh through gbp pq

 -- Iain Lane <laney@debian.org>  Wed, 12 Jun 2019 09:15:11 +0100

glib2.0 (2.60.3-2) experimental; urgency=medium

  * Team upload
  * d/p/gfile-Limit-access-to-files-when-copying.patch:
    Backport patch from upstream to ensure files don't temporarily have