@@ -1,2 +1,2 @@
-usr/lib/glib2.0/installed-tests
+usr/libexec/installed-tests
 usr/share/installed-tests
